builds at home ok with mingw32-make

--- a/make.inc.gcc4.5
+++ b/make.inc.gcc4.5
@@ -1,13 +1,9 @@
 
-
-
-# gcc 4.x 
-
-INCDIR = include
 CC = gcc
-CFLAGS = -fopenmp -march=native -ffast-math -O3 -I $(INCDIR)
-
-EXE = .exe
+CFLAGS = -fopenmp -march=native -ffast-math -O3 -I $(INCDIR) -static-libgcc
+MC = -c
+MOBJ = -o 
+MEXE = -o 
 OBJ = .o
 
 
